# AdvancedRobotics

ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/live1288_hw1/lib/live1288_hw1/: publisher  service_client  subscriber
ros2_ws/install/live1288_hw1/share/live1288_hw1/: package.dsv  package.sh  package.xml  package.zsh
ros2_ws/install/live1288_service/include/live1288_service/live1288_service/msg/: rosidl_generator_cpp__visibility_control.hpp  (+2 more)
ros2_ws/install/live1288_service/share/live1288_service/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/live1288_service/share/live1288_service/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_live1288_service__rosidl_generator_cExport-noconfig.cmake  export_live1288_service__rosidl_generator_cExport.cmake  export_live1288_service__rosidl_generator_pyExport-noconfig.cmake  export_live1288_service__rosidl_generator_pyExport.cmake  export_live1288_service__rosidl_typesupport_fastrtps_cExport.cmake  export_live1288_service__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  live1288_serviceConfig.cmake  live1288_service__rosidl_typesupport_introspection_cExport-noconfig.cmake  live1288_service__rosidl_typesupport_introspection_cExport.cmake
ros2_ws/install/live1288_service/share/live1288_service/srv/: Live1288Service.srv  Live1288Service_Response.msg
ros2_ws/src/live1288_hw1/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/live1288_hw1/install/: local_setup.sh  setup.sh
ros2_ws/src/live1288_hw1/live1288_hw1/: service_client.py
ros2_ws/src/live1288_hw1/live1288_hw1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/live1288_service/: CMakeLists.txt
(+23 files in other folders)
