<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>live1288_hw1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lisvent@todo.todo">lisvent</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>live1288_service</exec_depend>


  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
